键盘升起View移动

--- a/labonline/LoginView.xib
+++ b/labonline/LoginView.xib
@@ -32,7 +32,7 @@
                                 <constraint firstAttribute="height" constant="35" id="5tS-jk-1i0"/>
                             </constraints>
                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="namePhonePad"/>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入密码" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dMh-ID-AyH">
                             <rect key="frame" x="40" y="90" width="220" height="35"/>
@@ -40,7 +40,7 @@
                                 <constraint firstAttribute="height" constant="35" id="4JS-KX-fBW"/>
                             </constraints>
                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            <textInputTraits key="textInputTraits" keyboardType="namePhonePad" secureTextEntry="YES"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="229-YT-l2h">
                             <rect key="frame" x="0.0" y="155" width="150" height="45"/>
