设置界面小修改  以及主页技术专栏 主页详情界面的比例适配

--- a/labonline/SettingCell.xib
+++ b/labonline/SettingCell.xib
@@ -17,8 +17,8 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wifi.png" translatesAutoresizingMaskIntoConstraints="NO" id="d2p-gS-t7D">
                         <rect key="frame" x="15" y="7" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="25" id="LBz-dG-LPZ"/>
-                            <constraint firstAttribute="height" constant="25" id="RD9-wb-6sp"/>
+                            <constraint firstAttribute="width" constant="25" id="gXe-pX-w1w"/>
+                            <constraint firstAttribute="height" constant="25" id="t8i-p5-Oah"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WiFi环境下加载图片" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oHb-Uh-wd1">
@@ -27,24 +27,26 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J7F-x3-7Lw">
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J7F-x3-7Lw">
                         <rect key="frame" x="255" y="5" width="51" height="31"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="49" id="DKt-Ze-XnV"/>
+                            <constraint firstAttribute="height" constant="31" id="a7J-oA-nbP"/>
+                        </constraints>
                         <connections>
                             <action selector="onOrOffSwitchValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="y0Q-A0-1Kz"/>
                         </connections>
                     </switch>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="d2p-gS-t7D" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="1bO-Pr-7JR"/>
-                    <constraint firstItem="J7F-x3-7Lw" firstAttribute="leading" secondItem="oHb-Uh-wd1" secondAttribute="trailing" constant="5" id="20W-eK-PNZ"/>
-                    <constraint firstItem="oHb-Uh-wd1" firstAttribute="leading" secondItem="d2p-gS-t7D" secondAttribute="trailing" constant="10" id="22r-7O-q6d"/>
-                    <constraint firstAttribute="trailing" secondItem="J7F-x3-7Lw" secondAttribute="trailing" constant="16" id="4Z4-Nt-pk4"/>
-                    <constraint firstItem="d2p-gS-t7D" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Hmp-tn-z5e"/>
-                    <constraint firstItem="oHb-Uh-wd1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="MI3-OS-5LU"/>
-                    <constraint firstAttribute="bottom" secondItem="oHb-Uh-wd1" secondAttribute="bottom" constant="7" id="bJf-oz-aKM"/>
-                    <constraint firstAttribute="bottom" secondItem="J7F-x3-7Lw" secondAttribute="bottom" constant="3" id="lOw-Yh-uof"/>
-                    <constraint firstItem="J7F-x3-7Lw" firstAttribute="leading" secondItem="oHb-Uh-wd1" secondAttribute="trailing" constant="5" id="uMV-xX-Iz4"/>
-                    <constraint firstItem="J7F-x3-7Lw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="unE-bX-K7s"/>
+                    <constraint firstItem="oHb-Uh-wd1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="6Jc-6L-RQT"/>
+                    <constraint firstItem="d2p-gS-t7D" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Cdx-gd-oWQ"/>
+                    <constraint firstAttribute="trailing" secondItem="J7F-x3-7Lw" secondAttribute="trailing" constant="16" id="JYz-ZP-sLP"/>
+                    <constraint firstItem="J7F-x3-7Lw" firstAttribute="leading" secondItem="oHb-Uh-wd1" secondAttribute="trailing" constant="5" id="MVo-Hv-25K"/>
+                    <constraint firstAttribute="centerY" secondItem="d2p-gS-t7D" secondAttribute="centerY" id="c3n-8t-6xY"/>
+                    <constraint firstItem="oHb-Uh-wd1" firstAttribute="leading" secondItem="d2p-gS-t7D" secondAttribute="trailing" constant="10" id="dj8-vm-rp6"/>
+                    <constraint firstAttribute="centerY" secondItem="J7F-x3-7Lw" secondAttribute="centerY" id="mXo-VO-Xpt"/>
+                    <constraint firstAttribute="bottom" secondItem="oHb-Uh-wd1" secondAttribute="bottom" constant="7" id="z0y-F6-ldu"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -52,7 +54,7 @@
                 <outlet property="subImageView" destination="d2p-gS-t7D" id="cIq-dE-gkE"/>
                 <outlet property="textLable" destination="oHb-Uh-wd1" id="Exg-bP-tr8"/>
             </connections>
-            <point key="canvasLocation" x="250" y="304"/>
+            <point key="canvasLocation" x="129" y="395"/>
         </tableViewCell>
     </objects>
     <resources>
