--- a/labonline/JiShuZhuanLanMoreCell.xib
+++ b/labonline/JiShuZhuanLanMoreCell.xib
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7525" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment version="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7516"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,34 +15,42 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DW9-NX-a9T">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DW9-NX-a9T">
                         <rect key="frame" x="10" y="2" width="300" height="50"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="宝洁医疗诊断相机设计" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0c-Z5-bCz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="宝洁医疗诊断相机设计" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0c-Z5-bCz">
                                 <rect key="frame" x="5" y="5" width="300" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="wsx-3i-JGy"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="来源：中国知网" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pis-S3-kmi">
                                 <rect key="frame" x="5" y="26" width="200" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="NeB-B9-LX6"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="321" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="30h-c4-LoU">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="321" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="30h-c4-LoU">
                                 <rect key="frame" x="274" y="29" width="30" height="10"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="3lo-sj-jzc"/>
+                                    <constraint firstAttribute="width" constant="30" id="N9k-vh-DvI"/>
+                                    <constraint firstAttribute="height" constant="10" id="Ucz-02-96w"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" red="1" green="0.1915859607" blue="0.13115258390000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xPh-PL-lv0">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xPh-PL-lv0">
                                 <rect key="frame" x="251" y="26" width="15" height="13"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="15" id="hCY-2Y-lO9"/>
+                                    <constraint firstAttribute="height" constant="13" id="UaG-jO-Ejk"/>
+                                    <constraint firstAttribute="width" constant="15" id="YHH-H2-1Ch"/>
                                 </constraints>
                                 <state key="normal" backgroundImage="游览.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -53,28 +59,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="30h-c4-LoU" firstAttribute="leading" secondItem="xPh-PL-lv0" secondAttribute="trailing" constant="8" symbolic="YES" id="GgH-rt-XSm"/>
-                            <constraint firstItem="Pis-S3-kmi" firstAttribute="top" secondItem="xPh-PL-lv0" secondAttribute="top" id="J6F-WE-SGD"/>
-                            <constraint firstItem="h0c-Z5-bCz" firstAttribute="leading" secondItem="DW9-NX-a9T" secondAttribute="leading" constant="5" id="KZb-2h-ENs"/>
-                            <constraint firstItem="xPh-PL-lv0" firstAttribute="leading" secondItem="Pis-S3-kmi" secondAttribute="trailing" constant="46" id="UQK-kO-z8c"/>
-                            <constraint firstItem="30h-c4-LoU" firstAttribute="bottom" secondItem="xPh-PL-lv0" secondAttribute="bottom" id="diP-L1-wX4"/>
-                            <constraint firstItem="30h-c4-LoU" firstAttribute="top" secondItem="h0c-Z5-bCz" secondAttribute="bottom" constant="4" id="ePX-lE-InI"/>
-                            <constraint firstItem="Pis-S3-kmi" firstAttribute="leading" secondItem="h0c-Z5-bCz" secondAttribute="leading" id="ism-fQ-jmZ"/>
-                            <constraint firstItem="Pis-S3-kmi" firstAttribute="top" secondItem="h0c-Z5-bCz" secondAttribute="bottom" constant="1" id="jJQ-yZ-xwQ"/>
-                            <constraint firstItem="h0c-Z5-bCz" firstAttribute="top" secondItem="DW9-NX-a9T" secondAttribute="top" constant="5" id="lAt-F6-2hC"/>
-                            <constraint firstAttribute="bottom" secondItem="Pis-S3-kmi" secondAttribute="bottom" constant="9" id="rr3-j7-MCY"/>
-                            <constraint firstAttribute="trailing" secondItem="30h-c4-LoU" secondAttribute="trailing" constant="-4" id="t0O-4v-HS5"/>
-                            <constraint firstAttribute="trailing" secondItem="h0c-Z5-bCz" secondAttribute="trailing" constant="-5" id="vTc-2p-0AK"/>
-                            <constraint firstItem="30h-c4-LoU" firstAttribute="baseline" secondItem="Pis-S3-kmi" secondAttribute="firstBaseline" id="wdJ-oD-E94"/>
-                            <constraint firstItem="30h-c4-LoU" firstAttribute="baseline" secondItem="Pis-S3-kmi" secondAttribute="baseline" id="xiW-wS-atZ"/>
+                            <constraint firstItem="Pis-S3-kmi" firstAttribute="leading" secondItem="DW9-NX-a9T" secondAttribute="leading" constant="5" id="1gr-Qc-Lh9"/>
+                            <constraint firstItem="h0c-Z5-bCz" firstAttribute="top" secondItem="DW9-NX-a9T" secondAttribute="top" constant="5" id="EbV-wK-Ovf"/>
+                            <constraint firstItem="xPh-PL-lv0" firstAttribute="top" secondItem="h0c-Z5-bCz" secondAttribute="bottom" constant="1" id="FEl-2N-rya"/>
+                            <constraint firstAttribute="trailing" secondItem="h0c-Z5-bCz" secondAttribute="trailing" constant="-5" id="KbX-Wk-QAB"/>
+                            <constraint firstItem="Pis-S3-kmi" firstAttribute="top" secondItem="h0c-Z5-bCz" secondAttribute="bottom" constant="1" id="VCU-du-kl0"/>
+                            <constraint firstItem="30h-c4-LoU" firstAttribute="top" secondItem="h0c-Z5-bCz" secondAttribute="bottom" constant="4" id="eSV-fi-ht7"/>
+                            <constraint firstItem="h0c-Z5-bCz" firstAttribute="leading" secondItem="DW9-NX-a9T" secondAttribute="leading" constant="5" id="j6X-NY-40H"/>
+                            <constraint firstAttribute="trailing" secondItem="30h-c4-LoU" secondAttribute="trailing" constant="-4" id="oWl-F5-Q2S"/>
+                            <constraint firstItem="30h-c4-LoU" firstAttribute="leading" secondItem="xPh-PL-lv0" secondAttribute="trailing" constant="8" id="rYs-Gt-6oO"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="DW9-NX-a9T" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="G4j-G5-fyr"/>
-                    <constraint firstItem="DW9-NX-a9T" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="WE2-by-5wV"/>
-                    <constraint firstItem="DW9-NX-a9T" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-6" id="koJ-KJ-iRg"/>
-                    <constraint firstItem="DW9-NX-a9T" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-5" id="xDI-C8-muy"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="DW9-NX-a9T" secondAttribute="trailing" constant="2" id="CJE-cz-Fyo"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="DW9-NX-a9T" secondAttribute="bottom" constant="-6" id="UkZ-FQ-0oz"/>
+                    <constraint firstItem="DW9-NX-a9T" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-6" id="tEL-Vy-hlj"/>
+                    <constraint firstItem="DW9-NX-a9T" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="vGW-wW-bOg"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
