--- a/labonline/MainNewView.xib
+++ b/labonline/MainNewView.xib
@@ -14,50 +14,43 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wangqi.png" translatesAutoresizingMaskIntoConstraints="NO" id="3Ps-Yj-M0c">
                     <rect key="frame" x="10" y="10" width="120" height="150"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="120" id="vNk-Ov-aMi"/>
-                        <constraint firstAttribute="height" constant="150" id="xPJ-4f-yTL"/>
+                        <constraint firstAttribute="height" constant="150" id="9qe-a2-HjO"/>
+                        <constraint firstAttribute="width" constant="120" id="drp-gl-UoR"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rbA-H7-RYQ">
-                    <rect key="frame" x="140" y="15" width="45" height="20"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="kFp-wf-SZ8"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <state key="normal" title="New">
-                        <color key="titleColor" red="1" green="0.1915859607" blue="0.13115258390000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="宝洁医疗诊断相机" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zbk-Bw-0RQ">
-                    <rect key="frame" x="140" y="35" width="160" height="25"/>
+                    <rect key="frame" x="140" y="10" width="160" height="25"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="25" id="DfX-qN-gXD"/>
+                        <constraint firstAttribute="height" constant="25" id="Vt5-qo-K3f"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="期次：2015.03.18" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LiV-c8-ScV">
-                    <rect key="frame" x="140" y="60" width="160" height="15"/>
+                    <rect key="frame" x="140" y="35" width="160" height="15"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="15" id="ASy-wN-y2j"/>
+                        <constraint firstAttribute="height" constant="15" id="iRM-dL-YKL"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="昨天，百集系列剧《中华百家姓·起源故事》在郑州举行发布会，宣布“拜谒根脉圣地·溯源中华姓氏”中原寻根行活动启动，将通过晚报征" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bzV-af-lyZ">
-                    <rect key="frame" x="140" y="75" width="160" height="85"/>
+                    <rect key="frame" x="140" y="50" width="160" height="110"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="85" id="cfP-ZB-Yhj"/>
+                        <constraint firstAttribute="height" constant="110" id="Fwh-QV-SMU"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QzO-AX-Dtq">
-                    <rect key="frame" x="90" y="10" width="40" height="40"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QzO-AX-Dtq">
+                    <rect key="frame" x="100" y="10" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="UHs-iG-kVY"/>
+                        <constraint firstAttribute="height" constant="30" id="mHs-qk-W51"/>
+                    </constraints>
                     <state key="normal" backgroundImage="mainNew.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -65,20 +58,19 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="bzV-af-lyZ" firstAttribute="leading" secondItem="3Ps-Yj-M0c" secondAttribute="trailing" constant="10" id="7bs-yj-zyb"/>
-                <constraint firstItem="3Ps-Yj-M0c" firstAttribute="leading" secondItem="t6e-rf-KsY" secondAttribute="leading" constant="10" id="9mA-gw-sgj"/>
-                <constraint firstItem="rbA-H7-RYQ" firstAttribute="leading" secondItem="3Ps-Yj-M0c" secondAttribute="trailing" constant="10" id="C1U-Aa-LN1"/>
-                <constraint firstAttribute="trailing" secondItem="rbA-H7-RYQ" secondAttribute="trailing" constant="125" id="CPq-k6-yyF"/>
-                <constraint firstItem="3Ps-Yj-M0c" firstAttribute="top" secondItem="t6e-rf-KsY" secondAttribute="top" constant="10" id="Ded-jW-dvP"/>
-                <constraint firstItem="bzV-af-lyZ" firstAttribute="top" secondItem="LiV-c8-ScV" secondAttribute="bottom" id="Ij2-bW-VOC"/>
-                <constraint firstItem="LiV-c8-ScV" firstAttribute="top" secondItem="Zbk-Bw-0RQ" secondAttribute="bottom" id="Pp0-WK-cqg"/>
-                <constraint firstItem="Zbk-Bw-0RQ" firstAttribute="top" secondItem="rbA-H7-RYQ" secondAttribute="bottom" id="RdI-P1-2zA"/>
-                <constraint firstAttribute="trailing" secondItem="Zbk-Bw-0RQ" secondAttribute="trailing" constant="10" id="cgZ-My-mu2"/>
-                <constraint firstItem="LiV-c8-ScV" firstAttribute="leading" secondItem="3Ps-Yj-M0c" secondAttribute="trailing" constant="10" id="evo-Qw-vr9"/>
-                <constraint firstAttribute="trailing" secondItem="LiV-c8-ScV" secondAttribute="trailing" constant="10" id="ih9-ud-Thn"/>
-                <constraint firstAttribute="trailing" secondItem="bzV-af-lyZ" secondAttribute="trailing" constant="10" id="qgf-Su-Fmh"/>
-                <constraint firstItem="rbA-H7-RYQ" firstAttribute="top" secondItem="t6e-rf-KsY" secondAttribute="top" constant="15" id="xdu-hw-1UE"/>
-                <constraint firstItem="Zbk-Bw-0RQ" firstAttribute="leading" secondItem="3Ps-Yj-M0c" secondAttribute="trailing" constant="10" id="zN1-F5-TBF"/>
+                <constraint firstItem="LiV-c8-ScV" firstAttribute="top" secondItem="Zbk-Bw-0RQ" secondAttribute="bottom" id="5AO-xc-MBL"/>
+                <constraint firstItem="Zbk-Bw-0RQ" firstAttribute="top" secondItem="t6e-rf-KsY" secondAttribute="top" constant="10" id="DQV-Li-3Pi"/>
+                <constraint firstAttribute="trailing" secondItem="bzV-af-lyZ" secondAttribute="trailing" constant="10" id="Etd-fv-ZJP"/>
+                <constraint firstItem="LiV-c8-ScV" firstAttribute="leading" secondItem="QzO-AX-Dtq" secondAttribute="trailing" constant="10" id="GaX-he-zqx"/>
+                <constraint firstItem="3Ps-Yj-M0c" firstAttribute="top" secondItem="t6e-rf-KsY" secondAttribute="top" constant="10" id="PuQ-LA-Zs5"/>
+                <constraint firstAttribute="trailing" secondItem="LiV-c8-ScV" secondAttribute="trailing" constant="10" id="Qzx-Qh-amH"/>
+                <constraint firstItem="bzV-af-lyZ" firstAttribute="leading" secondItem="3Ps-Yj-M0c" secondAttribute="trailing" constant="10" id="R40-5q-SHB"/>
+                <constraint firstItem="Zbk-Bw-0RQ" firstAttribute="leading" secondItem="QzO-AX-Dtq" secondAttribute="trailing" constant="10" id="aEy-4U-xFa"/>
+                <constraint firstAttribute="trailing" secondItem="Zbk-Bw-0RQ" secondAttribute="trailing" constant="10" id="cPy-P4-gII"/>
+                <constraint firstItem="QzO-AX-Dtq" firstAttribute="leading" secondItem="t6e-rf-KsY" secondAttribute="leading" constant="100" id="dFU-Wa-zyC"/>
+                <constraint firstItem="3Ps-Yj-M0c" firstAttribute="leading" secondItem="t6e-rf-KsY" secondAttribute="leading" constant="10" id="tlw-LP-7NY"/>
+                <constraint firstItem="QzO-AX-Dtq" firstAttribute="top" secondItem="t6e-rf-KsY" secondAttribute="top" constant="10" id="wTJ-yQ-9Cz"/>
+                <constraint firstItem="bzV-af-lyZ" firstAttribute="top" secondItem="LiV-c8-ScV" secondAttribute="bottom" id="xMn-Bz-pqj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -86,7 +78,6 @@
                 <outlet property="magazineImageV" destination="3Ps-Yj-M0c" id="LdA-F6-GT6"/>
                 <outlet property="magazineTitleLable" destination="Zbk-Bw-0RQ" id="6R2-iU-els"/>
                 <outlet property="qiCiLable" destination="LiV-c8-ScV" id="2rd-Vg-vn5"/>
-                <outlet property="smallNewButton" destination="rbA-H7-RYQ" id="zOg-yU-qer"/>
             </connections>
             <point key="canvasLocation" x="75" y="143"/>
         </view>
